[tool.poetry]
name = "voice-agent"
version = "0.1.0"
description = "AI Voice Agent"
authors = ["Hammed Akande"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.5"
aiosignal = "^1.3.1"
annotated-types = "^0.7.0"
anyio = "^4.4.0"
appnope = "^0.1.4"
asttokens = "^2.4.1"
asyncio = "^3.4.3"
attrs = "^24.2.0"
certifi = "^2024.7.4"
cffi = "^1.17.0"
charset-normalizer = "^3.3.2"
comm = "^0.2.2"
dataclasses-json = "^0.6.7"
debugpy = "^1.8.5"
decorator = "^5.1.1"
deepgram-sdk = "^3.5.0"
distro = "^1.9.0"
executing = "^2.0.1"
frozenlist = "^1.4.1"
gevent = "^24.2.1"
greenlet = "^3.0.3"
groq = "^0.9.0"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httpx = "^0.27.0"
idna = "^3.7"
ipykernel = "^6.29.5"
ipython = "^8.26.0"
jedi = "^0.19.1"
jsonpatch = "^1.33"
jsonpointer = "^3.0.0"
jupyter-client = "^8.6.2"
jupyter-core = "^5.7.2"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-core = "^0.2.34"
langchain-groq = "^0.1.9"
langchain-openai = "^0.1.22"
langsmith = "^0.1.101"
marshmallow = "^3.22.0"
matplotlib-inline = "^0.1.7"
multidict = "^6.0.5"
mypy-extensions = "^1.0.0"
nest-asyncio = "^1.6.0"
numpy = "1.26.4"
openai = "^1.42.0"
orjson = "^3.10.7"
packaging = "^24.1"
parso = "^0.8.4"
pexpect = "^4.9.0"
platformdirs = "^4.2.2"
prompt-toolkit = "^3.0.47"
psutil = "^6.0.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pyaudio = "^0.2.14"
pycparser = "^2.22"
pydantic = "^2.8.2"
pydantic-core = "2.20.1"
pygame = "^2.6.0"
pygments = "^2.18.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
pyzmq = "^26.2.0"
regex = "^2024.7.24"
requests = "^2.32.3"
six = "^1.16.0"
sniffio = "^1.3.1"
sounddevice = "^0.5.0"
sqlalchemy = "^2.0.32"
stack-data = "^0.6.3"
tenacity = "8.2.3"
tiktoken = "^0.7.0"
tornado = "^6.4.1"
tqdm = "^4.66.5"
traitlets = "^5.14.3"
typing-inspect = "^0.9.0"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.2"
verboselogs = "^1.7"
wcwidth = "^0.2.13"
websocket = "^0.2.1"
websocket-client = "^1.8.0"
websockets = "^13.0"
yarl = "^1.9.4"
zope-event = "^5.0"
zope-interface = "^7.0.1"
streamlit = "^1.37.1"
redis = "^5.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
